brat/test/golden/error/apply_two_thunks.brat.golden
Error in test/golden/error/apply_two_thunks.brat on line 9:
go(n) = thunks(n)
        ^^^^^^^^^

  Type error: Expected function thunks() to consume all of its arguments (「n」)
 but found leftovers: (a1 :: Int)

